# LiquidRecO

./: .buildinfo  .gitignore  README.html  README.md  api.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-docs.yml
_sources/: api.rst.txt  index.rst.txt
doc/source/: README.md  conf.py  index.rst  intro.md
liquidreco/: base.py  configuration.py  event.py  event_processor.py  geometry.py  hit.py  peak_finding.py  plotting.py  reconstruction.py
liquidreco/app/: __init__.py  liquidreco.py
liquidreco/modules/: deconvolution.py  hit_building.py  module_base.py  module_list.py  peak_finding.py  plotting.py  reconstruction.py  utility.py
