[project]
name = "liquidreco"
dynamic = ["version"]
description = "Reconstruction library for a 3D LiquidO detector"
readme = "README.md"
maintainers = [
    {name = "Ewan Miller", email="emiller@ifae.es"},
]
authors = [
    {name = "Ewan Miller", email="emiller@ifae.es"},
]
license = "GPL-3.0-or-later"
dependencies = [
  "tqdm",
  "scikit-image",
  "matplotlib",
  "uproot",
  "numpy",
  "scipy",
  "scikit-learn",
  "linscan@git+https://github.com/ewanwm/linscan.git",
  "hough3d@git+https://github.com/ewanwm/hough3d.git",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
liquidreco = "liquidreco:app.liquidreco.main"